<resources>
    <string name="app_name">NextGenAppAndroid</string>
    <string name="preferences">preferences</string>
    <string name="profilePicture">Profile_Picture</string>
    <string name="selected_item">Selected item:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editbutton">editButton</string>
    <string name="select_your_ethnicity">Select Your Ethnicity:</string>
    <string name="enter_the_name_of_your_hospital">Enter the Name of Your Hospital:</string>
    <string name="enter_your_metabolic_condition">Enter Your Metabolic Condition:</string>
    <string name="select_your_gender">Select Your Gender:</string>
    <string name="enter_your_name">Enter Your Name:</string>
    <string name="enter_your_date_of_birth">Enter Your Date of Birth:</string>
    <string name="submit">Submit</string>
    <string name="explain_your_condition">Explain Your Condition:</string>
    <string name="button">Button</string>
    <string name="choose_picture_from_file">Choose Picture From File</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="picture">Picture</string>
    <string name="transition">transition</string>
    <string name="condition">condition</string>
    <string name="calendar">calendar</string>
    <string name="mailtracker">mailtracker</string>
    <string name="diettracker">diettracker</string>
    <string name="diettrackeradd">diettrackeradd</string>
    <string name="editaboutme">editaboutme</string>
    <string name="editmycondition">editmycondition</string>
    <string name="editmymedication">editmymedication</string>
    <string name="editprofilepicture">editProfilePicture</string>
    <string name="mailtrackeradd">mailTrackerAdd</string>
    <string name="transitiontrackeradd">transitionTrackerAdd</string>
    <string name="preferencesfragment">preferencesfragment</string>
    <string name="tvTitleBox">TextView</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="ethnicity_spinner">
        <item>White</item>
        <item>English</item>
        <item>Welsh</item>
        <item>Scottish</item>
        <item>Northern Irish</item>
        <item>Irish</item>
        <item>Gypsy or Irish Traveller</item>
        <item>Any other White background</item>
        <item>Mixed or Multiple ethnic groups</item>
        <item>White and Black Caribbean</item>
        <item>White and Black African</item>
        <item>Any other Mixed or Multiple background</item>
        <item>Asian</item>
        <item>Indian</item>
        <item>Pakistani</item>
        <item>Bangladeshi</item>
        <item>Chinese</item>
        <item>Any other Asian background</item>
        <item>Black</item>
        <item>African</item>
        <item>African American</item>
        <item>Caribbean</item>
        <item>Any other Black background</item>
        <item>Other ethnic groups</item>
        <item>Arab</item>
        <item>Hispanic</item>
        <item>Latino</item>
        <item>Native American</item>
        <item>Pacific Islander</item>
        <item>Any other ethnic group</item>
    </string-array>

    <string-array name="time_spinner">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="time_meal_spinner">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

    <string-array name="time_spinner_min">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>

        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>

        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>

        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>

        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>

        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="calendar_event_type">
        <item>Appointment</item>
        <item>Nutrition</item>
        <item>Transport</item>
        <item>work</item>
    </string-array>


    //Day's short keyword
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
</resources>
