<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConditionAboutEdit">

    <TextView
        android:id="@+id/tvEnterName"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/boxpink"
        android:gravity="center_vertical"
        android:text="@string/enter_your_name"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/boxpink"
        android:gravity="center_vertical"
        android:text="@string/select_your_gender"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <TextView
        android:id="@+id/tvCondition"
        android:layout_width="344dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/boxpink"
        android:gravity="center_vertical"
        android:text="@string/enter_your_metabolic_condition"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGender" />

    <TextView
        android:id="@+id/tvHospital"
        android:layout_width="344dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/boxpink"
        android:gravity="center_vertical"
        android:text="@string/enter_the_name_of_your_hospital"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCondition" />

    <TextView
        android:id="@+id/tvEthnicity"
        android:layout_width="344dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/boxpink"
        android:gravity="center_vertical"
        android:text="@string/select_your_ethnicity"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHospital" />

    <TextView
        android:id="@+id/tvDoB"
        android:layout_width="344dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/boxpink"
        android:gravity="center_vertical"
        android:text="@string/enter_your_date_of_birth"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEthnicity" />

    <TextView
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#ebebeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterName" />

    <TextView
        android:id="@+id/etEthnicity"
        android:layout_width="344dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#ebebeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEthnicity" />

    <TextView
        android:id="@+id/etEthnicity2"
        android:layout_width="344dp"
        android:layout_height="30dp"
        android:background="#ebebeb"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="520dp" />

    <TextView
        android:id="@+id/etGender"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#ebebeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGender" />

    <TextView
        android:id="@+id/etCondition"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#ebebeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCondition" />

    <TextView
        android:id="@+id/etHospital"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#ebebeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHospital" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGender" />

    <Spinner
        android:id="@+id/ethnicitySpinner"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEthnicity" />

</android.support.constraint.ConstraintLayout>